<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameMarretada</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_pontos">Pontos:</string>
    <string name="lbl_pontos_valor">0000</string>
    <string name="lbl_tempo">Tempo:</string>
    <string name="lbl_tempo_valor">00:00</string>
    <string name="lbl_vidas">Vidas:</string>
    <string name="lbl_jogar">Jogar:</string>

</resources>
