<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pontos"
            android:layout_weight="1"
            android:padding="10dp"
            />
        <TextView 
            android:id="@+id/textViewPontos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pontos_valor"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_tempo"
            android:layout_weight="1"
            android:padding="10dp"
            />
        <TextView 
            android:id="@+id/textViewTempo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_tempo_valor"
            android:layout_weight="1"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_vidas"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="10dp"
            />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            
            <Button 
	            android:id="@+id/btVida1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:background="@color/verde"
                />
            <Button 
	            android:id="@+id/btVida2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:background="@color/verde"
                />
            <Button 
                android:id="@+id/btVida3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:background="@color/verde"
                />
            <Button 
                android:id="@+id/btVida4"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:background="@color/verde"	            
                />
            
        </LinearLayout>
    
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/cinza"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button1"
            android:background="@color/cinza"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button1"
            android:background="@color/cinza"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button4"
            android:background="@color/cinza"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/button5"
            android:layout_alignBottom="@+id/button5"
            android:layout_alignParentRight="true"
            android:background="@color/cinza"
            />

        <Button
            android:id="@+id/button7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/button4"
            android:layout_below="@+id/button6"
            android:background="@color/cinza"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/button2"
            android:background="@color/cinza"
            />

    </RelativeLayout>
    
</LinearLayout>

